--- a/css/style.css
+++ b/css/style.css
@@ -26,11 +26,50 @@ body {
   height: 95vh;
   background-image: linear-gradient(
       to right bottom,
-      rgba(126, 213, 111, 0.7),
-      rgba(40, 180, 133, 0.7)
+      rgba(126, 213, 111, .6),
+      rgba(255, 255, 255, .6),
+      rgba(245, 42, 42, .6)
     ),
     url("../img/hero.jpg");
   background-size: cover;
   background-position: center;
-  clip-path: polygon(0 0, 100vw 0, 100vw 75vh, 0 100vh);
+  position: relative;
+  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+}
+
+.logo-box {
+  position: absolute;
+  top: 40px;
+  left: 40px;
+}
+
+.logo {
+  height: 35px;
+}
+
+.text-box {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -40%);
+}
+
+.heading-primary {
+  color: #fff;
+  text-transform: uppercase;
+}
+.heading-primary-main {
+  display: block;
+  font-size: 60px;
+  font-weight: 700;
+  letter-spacing: 20px;
+  line-height: 70px;
+}
+.heading-primary-sub {
+  margin-top: 15px;
+  display: block;
+  font-size: 20px;
+  font-weight: 700;
+  letter-spacing: 5px;
 }
