--- a/css/style.css
+++ b/css/style.css
@@ -26,9 +26,9 @@ body {
   height: 95vh;
   background-image: linear-gradient(
       to right bottom,
-      rgba(126, 213, 111, .6),
-      rgba(255, 255, 255, .6),
-      rgba(245, 42, 42, .6)
+      rgba(126, 213, 111, .5),
+      rgba(255, 255, 255, .5),
+      rgba(245, 42, 42, .5)
     ),
     url("../img/hero.jpg");
   background-size: cover;
@@ -58,6 +58,7 @@ body {
 .heading-primary {
   color: #fff;
   text-transform: uppercase;
+  backface-visibility: hidden;
 }
 .heading-primary-main {
   display: block;
@@ -65,6 +66,12 @@ body {
   font-weight: 700;
   letter-spacing: 20px;
   line-height: 70px;
+  animation-name: moveInLeft;
+  animation-duration: 1s;
+/* 
+  animation-timing-function: ease-in;
+  animation-iteration-count: 2;
+  animation-delay: 3s; */
 }
 .heading-primary-sub {
   margin-top: 15px;
@@ -72,4 +79,38 @@ body {
   font-size: 20px;
   font-weight: 700;
   letter-spacing: 5px;
+  animation-name: moveInRight;
+  animation-duration: 1s;
+}
+
+@keyframes moveInLeft {
+    0% {
+        opacity: 0;
+        transform: translateX(-100px);
+    }
+
+    80% {
+        transform: translateX(10px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateX(0px);
+    }
+}
+
+@keyframes moveInRight {
+    0% {
+        opacity: 0;
+        transform: translateX(100px);
+    }
+
+    80% {
+        transform: translateX(-10px);
+    }
+
+    100%{
+        opacity: 1;
+        transform: translateX(0px);
+    }
 }
