--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,6 @@ Medium green: #55c57a
 Dark green: #28b485
 
 */
-
 *,
 *::after,
 *::before {
@@ -33,49 +32,44 @@ body {
   background-position: center;
   position: relative;
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%); }
-
-.header__logo-box {
-  position: absolute;
-  top: 4rem;
-  left: 4rem; }
-
-.header__logo {
-  height: 3.5rem; }
-
-.header__text-box {
-  text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -40%); }
+  .header__logo-box {
+    position: absolute;
+    top: 4rem;
+    left: 4rem; }
+  .header__logo {
+    height: 3.5rem; }
+  .header__text-box {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -40%); }
 
 .heading-primary {
   color: #fff;
   text-transform: uppercase;
   backface-visibility: hidden;
   margin-bottom: 5rem; }
-
-.heading-primary--main {
-  display: block;
-  font-size: 6rem;
-  font-weight: 700;
-  letter-spacing: 2rem;
-  line-height: 7rem;
-  animation-name: moveInLeft;
-  animation-duration: 1s;
-  /* 
-  animation-timing-function: ease-in;
-  animation-iteration-count: 2;
-  animation-delay: 3s; */ }
-
-.heading-primary--sub {
-  margin-top: 1.5rem;
-  display: block;
-  font-size: 2rem;
-  font-weight: 700;
-  letter-spacing: .5rem;
-  animation-name: moveInRight;
-  animation-duration: 1s; }
+  .heading-primary--main {
+    display: block;
+    font-size: 6rem;
+    font-weight: 700;
+    letter-spacing: 2rem;
+    line-height: 7rem;
+    animation-name: moveInLeft;
+    animation-duration: 1s;
+    /* 
+    animation-timing-function: ease-in;
+    animation-iteration-count: 2;
+    animation-delay: 3s; */ }
+  .heading-primary--sub {
+    margin-top: 1.5rem;
+    display: block;
+    font-size: 2rem;
+    font-weight: 700;
+    letter-spacing: 0.5rem;
+    animation-name: moveInRight;
+    animation-duration: 1s; }
 
 @keyframes moveInLeft {
   0% {
@@ -105,17 +99,17 @@ body {
     opacity: 1;
     transform: translateY(0px); } }
 
-.btn:link {
+.btn:link, .btn:visited {
   text-transform: uppercase;
   text-decoration: none;
   padding: 1.5rem 4rem;
   display: inline-block;
   border-radius: 10rem;
-  transition: all .2s;
+  transition: all 0.2s;
   position: relative; }
 
 .btn--animated {
-  animation: moveInButton .5s ease-out .5s;
+  animation: moveInButton 0.5s ease-out 0.5s;
   animation-fill-mode: backwards; }
 
 .btn:hover {
@@ -129,6 +123,8 @@ body {
 .btn--white {
   background-color: #fff;
   color: #777; }
+  .btn--white::after {
+    background-color: white; }
 
 .btn::after {
   content: "";
@@ -140,10 +136,7 @@ body {
   top: 0;
   left: 0;
   z-index: -1;
-  transition: all .4s; }
-
-.btn--white::after {
-  background-color: white; }
+  transition: all 0.4s; }
 
 .btn:hover::after {
   transform: scaleX(1.4) scaleY(1.6);
