--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,2 +1,12 @@
-$color-primary: rgb(126, 213, 111);
+//COLORS
+$color-primary: #7ed56f;
+$color-primary-light: #7ed56f;
+$color-primary-dark: #28b485;
 $color-dark-gray: #777;
+$color-gray-light-1: #f7f7f7;
+$color-black: #000;
+
+//GRID
+$grid-width: 114rem;
+$gutter-vertical: 8rem;
+$gutter-horizontal: 6rem;
