--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -6,6 +6,10 @@ $color-dark-gray: #777;
 $color-gray-light-1: #f7f7f7;
 $color-black: #000;
 
+//FONT
+
+$default-font-size: 1.6rem;
+
 //GRID
 $grid-width: 114rem;
 $gutter-vertical: 8rem;
