--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -5,6 +5,7 @@ $color-primary-dark: #28b485;
 $color-dark-gray: #777;
 $color-gray-light-1: #f7f7f7;
 $color-black: #000;
+$color-white: #fff;
 
 //FONT
 
