--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -3,3 +3,21 @@
     padding: 25rem 0;
     margin-top: -20vh;
 }
+
+.section-features {
+    padding: 20rem 0;
+      background-image: linear-gradient(
+        to right bottom,
+        rgba($color-primary, 0.5),
+        rgba(255, 255, 255, 0.5),
+        rgba(245, 42, 42, 0.5)
+      ),
+      url("../img/features.jpg");
+      background-size: cover;
+      transform: skewY(-7deg);
+      margin-top: -12rem;
+
+      & > * {
+        transform: skewY(7deg);
+      }
+}
