--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -29,6 +29,12 @@
             &-1 {
                 background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark);
             }
+            &-2 {
+                background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark);
+            }
+            &-3 {
+                background-image: linear-gradient(to right bottom, $color-tertiary-light, $color-tertiary-dark);
+            }
 
         }
     }
@@ -55,10 +61,10 @@
             background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark), url("../img/tours-1.jpg");
         }
         &-2 {
-            background-image: url("../img/tours-2.jpg");
+            background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark), url("../img/tours-3.jpg");
         }
         &-3 {
-            background-image: url("../img/tours-3.jpg");
+            background-image: linear-gradient(to right bottom, $color-tertiary-light, $color-tertiary-dark), url("../img/tours-2.jpg");
         }
     }
 
@@ -82,6 +88,12 @@
         &--1 {
             background-image: linear-gradient(to right bottom, rgba($color-secondary-light, .85), rgba($color-secondary-dark, .85))
         }
+        &--2 {
+            background-image: linear-gradient(to right bottom, rgba($color-primary-light, .85), rgba($color-primary-dark, .85))
+        }
+        &--3 {
+            background-image: linear-gradient(to right bottom, rgba($color-tertiary-light, .85), rgba($color-tertiary-dark, .85))
+        }
     }
 
     &__details {
@@ -103,5 +115,30 @@
                 }
             }
         }
+    }
+
+    &__cta {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 90%;
+        text-align: center;
+    }
+
+    &__price-box {
+        text-align: center;
+        color: $color-white;
+        margin-bottom: 8rem;
+    }
+
+    &__price-only {
+        font-size: 1.4rem;
+        text-transform: uppercase;
+    }
+
+     &__price-value {
+        font-size: 6rem;
+        font-weight: 100;
     }
 } 
