--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -31,7 +31,15 @@
       background-color: #fff;
       color: #777;
       &::after {
-        background-color: white;
+        background-color: $color-white;
+      }
+    }
+
+    &--green {
+      background-color: $color-primary;
+      color: $color-white;
+      &::after {
+        background-color: $color-primary;
       }
     }
   
