added pure css popup to finish put desktop version of completed site

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,6 +15,7 @@
 @import "components/story";
 @import "components/bg-video";
 @import "components/form";
+@import "components/popup";
 
 
 @import "pages/home";
@@ -23,4 +24,5 @@
 @import "layout/grid";
 @import "layout/footer";
 @import "layout/navigation";
+
  
