--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -1,7 +1,50 @@
 @mixin clearfix {
-    &::after {
-        content: "";
-        display: table;
-        clear: both;
+  &::after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+}
+
+@mixin respond-phone {
+  @media (max-width: 600px) {
+    @content;
+  }
+}
+
+/*
+    breakpoint argument choices:
+    - phone
+    - tab-port
+    - tab-land
+    - desktop
+*/
+
+@mixin respond($breakpoint) {
+    @if $breakpoint == phone {
+        @media (max-width: 37.5em) {   //600px
+            @content;
+          }
+    }
+    @if $breakpoint == tab-port {
+        @media (max-width: 56.25em) {  //900px
+            @content;
+          }
+    }
+    @if $breakpoint == tab-landscape {
+        @media (max-width: 75em) {  //1200px
+            @content;
+          }
+    }
+    @if $breakpoint == desktop {
+        @media (min-width: 112.5em) {  //1800px
+            @content;
+          }
     }
 }
+
+// 0-600: Phone
+// 600-900: TabPort
+// 900-1200: TabLand
+// 1200-1800: Desktop
+// >1800 Other
