--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,70 +1,92 @@
-
 body {
-    font-family: "Lato", sans-serif;
-    font-weight: 400;
-    /* font-size: 16px; */
-    line-height: 1.7;
-    color: $color-dark-gray;
-    padding: 3rem;
-  }
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  /* font-size: 16px; */
+  line-height: 1.7;
+  color: $color-dark-gray;
+}
 
 .heading-primary {
-    color: #fff;
-    text-transform: uppercase;
-    backface-visibility: hidden;
-    margin-bottom: 5rem;
-  
-    &--main {
-      display: block;
-      font-size: 6rem;
-      font-weight: 700;
-      letter-spacing: 2rem;
-      line-height: 7rem;
-      animation-name: moveInLeft;
-      animation-duration: 1s;
-      /* 
+  color: #fff;
+  text-transform: uppercase;
+  backface-visibility: hidden;
+  margin-bottom: 5rem;
+
+  &--main {
+    display: block;
+    font-size: 6rem;
+    font-weight: 700;
+    letter-spacing: 2rem;
+    line-height: 7rem;
+    animation-name: moveInLeft;
+    animation-duration: 1s;
+
+    @include respond(phone) {
+      letter-spacing: 1rem;
+      font-size: 4rem;
+      line-height: 1.5;
+    }
+    /* 
       animation-timing-function: ease-in;
       animation-iteration-count: 2;
       animation-delay: 3s; */
-    }
-    &--sub {
-      margin-top: 1.5rem;
-      display: block;
-      font-size: 2rem;
-      font-weight: 700;
-      letter-spacing: 0.5rem;
-      animation-name: moveInRight;
-      animation-duration: 1s;
-    }
   }
-
-  .heading-secondary {
-      font-size: 3.5rem;
-      text-transform: uppercase;
-      font-weight: 700;
-      display: inline-block;
-      background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
-      -webkit-background-clip: text;
-      color: transparent;
-      letter-spacing: .2rem;
-      transition: all .2s;
-
-      &:hover {
-          transform: skewY(2deg) skewX(15deg) scale(1.1);
-          text-shadow: .5rem 1rem 2rem rgba($color-black, .2);
-      }
-  }
-
-  .heading-tertiary {
-    font-size: $default-font-size;
+  &--sub {
+    margin-top: 1.5rem;
+    display: block;
+    font-size: 2rem;
     font-weight: 700;
-    text-transform: uppercase;
+    letter-spacing: 0.5rem;
+    animation-name: moveInRight;
+    animation-duration: 1s;
+
+    @include respond(phone) {
+      letter-spacing: 1rem;
+      font-size: 2rem;
+    }
+  }
+}
+
+.heading-secondary {
+  font-size: 3.5rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  display: inline-block;
+  background-image: linear-gradient(
+    to right,
+    $color-primary-light,
+    $color-primary-dark
+  );
+  -webkit-background-clip: text;
+  color: transparent;
+  letter-spacing: 0.2rem;
+  transition: all 0.2s; 
+
+  @include respond(tab-port) {
+    font-size: 3rem;
   }
 
-  .paragraph {
-    font-size: $default-font-size;
-
-    &:not(:last-child) {
-      margin-bottom: 3rem;
-    } 
+  @include respond(phone) {
+    font-size: 2rem;
+    letter-spacing: 0rem;
   }
+
+  &:hover {
+    transform: skewY(2deg) skewX(15deg) scale(1.1);
+    text-shadow: 0.5rem 1rem 2rem rgba($color-black, 0.2);
+  }
+}
+
+.heading-tertiary {
+  font-size: $default-font-size;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.paragraph {
+  font-size: $default-font-size;
+
+  &:not(:last-child) {
+    margin-bottom: 3rem;
+  }
+}
