--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -22,12 +22,16 @@
     display: table;
     overflow: hidden;
     opacity: 0;
-    transition: all .4s .2s;
+    transition: all 0.4s 0.2s;
   }
 
   &__left {
     width: 33.3333333%;
     display: table-cell;
+
+    @include respond(tab-port) {
+      display: none;
+    }
   }
 
   &__right {
