--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -63,6 +63,7 @@
     position: absolute;
     top: 50%;
     left: 50%;
+    width: 100%;
     transform: translate(-50%, -50%);
     list-style: none;
     text-align: center;
